--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-images": "^1.2.0-beta.7",
+    "react-multi-carousel": "^2.8.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
